--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "path-to-regexp": "^6.2.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -x npm run server",
+    "start": "nodemon npm run server",
     "server": "node index"
   },
   "repository": {
